# napari-nunet

./: .gitignore  LICENSE  README.md  dev_plugin.ipynb  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/: dev_tests.ipynb
src/napari_nunet/: __init__.py  _widget.py  img_utils.py  napari.yaml  utils.py
src/napari_nunet/_tests/: test_widget.py
